--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
         "@reduxjs/toolkit": "^2.6.0",
         "@rneui/base": "^4.0.0-rc.7",
         "@rneui/themed": "^4.0.0-rc.8",
+        "i18next": "^24.2.2",
         "react": "19.0.0",
+        "react-i18next": "^15.4.1",
         "react-native": "0.78.0",
         "react-native-pager-view": "^6.7.0",
         "react-native-safe-area-context": "^5.2.0",
@@ -51,11 +53,12 @@
         "@types/react": "^19.0.0",
         "@types/react-test-renderer": "^19.0.0",
         "babel-plugin-module-resolver": "^5.0.2",
-        "react-native-svg-transformer": "^1.5.0",
         "eslint": "^8.19.0",
         "jest": "^29.6.3",
         "prettier": "2.8.8",
+        "react-native-svg-transformer": "^1.5.0",
         "react-test-renderer": "19.0.0",
+        "reactotron-react-native": "^5.1.12",
         "typescript": "5.0.4"
     },
     "engines": {
