--- a/config/dev/GoogleService-Info.plist
+++ b/config/dev/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>797630589124-5c9dvukhvat1g1vagui9132p8fvkcr3p.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.797630589124-5c9dvukhvat1g1vagui9132p8fvkcr3p</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBZe5PeWXDEJl_5_NeWGetri2ByPtf-ICA</string>
 	<key>GCM_SENDER_ID</key>
