--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.22.0",
+        "@react-native-async-storage/async-storage": "^1.24.0",
         "@react-native-google-signin/google-signin": "^13.2.0",
         "@react-navigation/bottom-tabs": "^7.2.0",
         "@react-navigation/native": "^7.0.14",
@@ -34,7 +35,6 @@
         "react-native-pager-view": "^6.7.0",
         "react-native-safe-area-context": "^5.2.0",
         "react-native-screens": "^4.9.1",
-        "react-native-vector-icons": "^10.2.0",
         "react-redux": "^9.2.0"
     },
     "devDependencies": {
