--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "baseUrl": "./",
       "resolveJsonModule": true,
       "paths": {
-          "@/*": ["src/*"]
+          "@/*": ["src/*"],
+          "@firebase/auth": ["./node_modules/@firebase/auth/dist/index.rn.d.ts"]
       }
   }
 }
