setup firebase on android

--- a/config/dev/.env.dev
+++ b/config/dev/.env.dev
@@ -1,1 +1,2 @@
 IOS_CLIENT=873213503475-99cvi1c6hosaar5edmimqgj7c39spak2.apps.googleusercontent.com
+ANDROID_CLIENT=797630589124-ge2d4b4joro4gsapl8pg0prmlbu7rg9d.apps.googleusercontent.com
