--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
         "react": "19.0.0",
         "react-i18next": "^15.4.1",
         "react-native": "0.78.0",
+        "react-native-config": "^1.5.5",
         "react-native-linear-gradient": "^2.8.3",
         "react-native-pager-view": "^6.7.0",
         "react-native-safe-area-context": "^5.2.0",
         "react-native-screens": "^4.9.1",
+        "react-native-vector-icons": "^10.2.0",
         "react-redux": "^9.2.0"
     },
     "devDependencies": {
