--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "i18next": "^24.2.2",
         "react": "19.0.0",
         "react-i18next": "^15.4.1",
-        "react-native": "0.78.0",
+        "react-native": "^0.78.0",
         "react-native-config": "^1.5.5",
         "react-native-linear-gradient": "^2.8.3",
         "react-native-pager-view": "^6.7.0",
