--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-i18next": "^15.4.1",
         "react-native": "0.78.0",
         "react-native-config": "^1.5.5",
+        "react-native-image-picker": "^8.2.0",
         "react-native-linear-gradient": "^2.8.3",
         "react-native-pager-view": "^6.7.0",
         "react-native-safe-area-context": "^5.2.0",
