--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@google/generative-ai": "^0.22.0",
         "@react-native-async-storage/async-storage": "^1.24.0",
         "@react-native-google-signin/google-signin": "^13.2.0",
+        "@react-native-voice/voice": "^3.2.4",
         "@react-navigation/bottom-tabs": "^7.2.0",
         "@react-navigation/native": "^7.0.14",
         "@react-navigation/native-stack": "^7.2.0",
@@ -32,12 +33,17 @@
         "react-i18next": "^15.4.1",
         "react-native": "0.78.0",
         "react-native-config": "^1.5.5",
+        "react-native-get-random-values": "^1.11.0",
         "react-native-linear-gradient": "^2.8.3",
         "react-native-pager-view": "^6.7.0",
         "react-native-safe-area-context": "^5.2.0",
         "react-native-screens": "^4.9.1",
+        "react-native-tts": "^4.1.1",
         "react-native-vector-icons": "^10.2.0",
-        "react-redux": "^9.2.0"
+        "react-redux": "^9.2.0",
+        "redux": "^5.0.1",
+        "redux-persist": "^6.0.0",
+        "uuid": "^11.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.25.2",
