--- a/ios/EngChatGemini/Info.plist
+++ b/ios/EngChatGemini/Info.plist
@@ -81,5 +81,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSSpeechRecognitionUsageDescription</key>
+<string>We need access to speech recognition</string>
+<key>NSMicrophoneUsageDescription</key>
+<string>We need access to the microphone</string>
 </dict>
 </plist>
