--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@google/generative-ai": "^0.22.0",
         "@react-native-async-storage/async-storage": "^1.24.0",
+        "@react-native-community/slider": "^4.5.6",
         "@react-native-google-signin/google-signin": "^13.2.0",
         "@react-navigation/bottom-tabs": "^7.2.0",
         "@react-navigation/native": "^7.0.14",
