--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@rneui/themed": "^4.0.0-rc.8",
         "firebase": "^11.4.0",
         "i18next": "^24.2.2",
+        "lottie-react-native": "^7.2.2",
         "react": "19.0.0",
         "react-i18next": "^15.4.1",
         "react-native": "0.78.0",
