--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@reduxjs/toolkit": "^2.6.0",
         "@rneui/base": "^4.0.0-rc.7",
         "@rneui/themed": "^4.0.0-rc.8",
+        "async-mutex": "^0.5.0",
         "firebase": "^11.4.0",
         "i18next": "^24.2.2",
         "lottie-react-native": "^7.2.2",
