--- a/config/dev/.env.dev
+++ b/config/dev/.env.dev
@@ -5,3 +5,4 @@ API_KEY=AIzaSyBlb3F5EA7rQGX7Ko2QkxRtJOKeUyUM6uE
 APP_ID=1:797630589124:web:b0b96e17779bf58617c191
 GEMINI_KEY=AIzaSyCHW6bA3Ow3hUNAZLccpu1wEyJXj4fldHY
 GEMINI_MODEL=gemini-2.0-flash
+BASEURL=http://localhost:3000
