--- a/ios/EngChatGemini/Info.plist
+++ b/ios/EngChatGemini/Info.plist
@@ -27,10 +27,17 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
+				<string>com.googleusercontent.apps.797630589124-5v1p7ehnsvph0rln4ndi1e8jdhunfsas</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
 				<string>com.googleusercontent.apps.797630589124-5c9dvukhvat1g1vagui9132p8fvkcr3p</string>
 			</array>
 		</dict>
-		<dict/>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
