--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "@react-navigation/bottom-tabs": "^7.2.0",
         "@react-navigation/native": "^7.0.14",
         "@react-navigation/native-stack": "^7.2.0",
-        "@realm/react": "^0.11.0",
         "@reduxjs/toolkit": "^2.6.0",
         "@rneui/base": "^4.0.0-rc.7",
         "@rneui/themed": "^4.0.0-rc.8",
@@ -42,10 +41,10 @@
         "react-native-pager-view": "^6.7.0",
         "react-native-safe-area-context": "^5.2.0",
         "react-native-screens": "^4.9.1",
+        "react-native-sound-player": "^0.14.5",
         "react-native-tts": "^4.1.1",
         "react-native-vector-icons": "^10.2.0",
         "react-redux": "^9.2.0",
-        "realm": "^12.14.1",
         "redux": "^5.0.1",
         "redux-persist": "^6.0.0",
         "uuid": "^11.1.0"
