--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-native-progress": "^5.0.1",
         "react-native-safe-area-context": "^5.2.0",
         "react-native-screens": "^4.9.1",
+        "react-native-sound": "^0.11.2",
         "react-native-sound-player": "^0.14.5",
         "react-native-tts": "^4.1.1",
         "react-native-vector-icons": "^10.2.0",
