--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "clean-all": "sudo yarn clean-node && yarn clean-ios && yarn clean-android && yarn clean-watch"
     },
     "dependencies": {
+        "@dr.pogodin/react-native-fs": "^2.32.1",
         "@google/generative-ai": "^0.22.0",
         "@react-native-async-storage/async-storage": "^1.24.0",
         "@react-native-community/slider": "^4.5.6",
